antlr/src/LogicParser.js
// Generated from Logic.g4 by ANTLR 4.6
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LogicVisitor = require('./LogicVisitor').LogicVisitor;

var grammarFileName = "Logic.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'1'", "'0'", "'!'", "'&'", "'|'", "'->'", "'~'", 
                     "'('", "')'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, "SYMBOL" ];

var ruleNames =  [ "file", "formula", "constant", "negatiation", "conjunction", 
                   "disjunction", "implication", "eqivalencio", "binary_couple", 
                   "atom", "unary_formula", "binary_formula" ];

function LogicParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LogicParser.prototype = Object.create(antlr4.Parser.prototype);
LogicParser.prototype.constructor = LogicParser;

Object.defineProperty(LogicParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LogicParser.EOF = antlr4.Token.EOF;
LogicParser.T__0 = 1;
LogicParser.T__1 = 2;
LogicParser.T__2 = 3;
LogicParser.T__3 = 4;
LogicParser.T__4 = 5;
LogicParser.T__5 = 6;
LogicParser.T__6 = 7;
LogicParser.T__7 = 8;
LogicParser.T__8 = 9;
LogicParser.SYMBOL = 10;

LogicParser.RULE_file = 0;
LogicParser.RULE_formula = 1;
LogicParser.RULE_constant = 2;
LogicParser.RULE_negatiation = 3;
LogicParser.RULE_conjunction = 4;
LogicParser.RULE_disjunction = 5;
LogicParser.RULE_implication = 6;
LogicParser.RULE_eqivalencio = 7;
LogicParser.RULE_binary_couple = 8;
LogicParser.RULE_atom = 9;
LogicParser.RULE_unary_formula = 10;
LogicParser.RULE_binary_formula = 11;

function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.formula = function() {
    return this.getTypedRuleContext(FormulaContext,0);
};

FileContext.prototype.EOF = function() {
    return this.getToken(LogicParser.EOF, 0);
};

FileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitFile(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.FileContext = FileContext;

LogicParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LogicParser.RULE_file);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 24;
        this.formula();
        this.state = 25;
        this.match(LogicParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_formula;
    return this;
}

FormulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormulaContext.prototype.constructor = FormulaContext;

FormulaContext.prototype.constant = function() {
    return this.getTypedRuleContext(ConstantContext,0);
};

FormulaContext.prototype.atom = function() {
    return this.getTypedRuleContext(AtomContext,0);
};

FormulaContext.prototype.unary_formula = function() {
    return this.getTypedRuleContext(Unary_formulaContext,0);
};

FormulaContext.prototype.binary_formula = function() {
    return this.getTypedRuleContext(Binary_formulaContext,0);
};

FormulaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitFormula(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.FormulaContext = FormulaContext;

LogicParser.prototype.formula = function() {

    var localctx = new FormulaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LogicParser.RULE_formula);
    try {
        this.state = 31;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 27;
            this.constant();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 28;
            this.atom();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 29;
            this.unary_formula();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 30;
            this.binary_formula();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConstantContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_constant;
    return this;
}

ConstantContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstantContext.prototype.constructor = ConstantContext;


ConstantContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitConstant(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.ConstantContext = ConstantContext;

LogicParser.prototype.constant = function() {

    var localctx = new ConstantContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LogicParser.RULE_constant);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 33;
        _la = this._input.LA(1);
        if(!(_la===LogicParser.T__0 || _la===LogicParser.T__1)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NegatiationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_negatiation;
    return this;
}

NegatiationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NegatiationContext.prototype.constructor = NegatiationContext;


NegatiationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitNegatiation(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.NegatiationContext = NegatiationContext;

LogicParser.prototype.negatiation = function() {

    var localctx = new NegatiationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LogicParser.RULE_negatiation);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 35;
        this.match(LogicParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConjunctionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_conjunction;
    return this;
}

ConjunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConjunctionContext.prototype.constructor = ConjunctionContext;


ConjunctionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitConjunction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.ConjunctionContext = ConjunctionContext;

LogicParser.prototype.conjunction = function() {

    var localctx = new ConjunctionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LogicParser.RULE_conjunction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 37;
        this.match(LogicParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DisjunctionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_disjunction;
    return this;
}

DisjunctionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DisjunctionContext.prototype.constructor = DisjunctionContext;


DisjunctionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitDisjunction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.DisjunctionContext = DisjunctionContext;

LogicParser.prototype.disjunction = function() {

    var localctx = new DisjunctionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LogicParser.RULE_disjunction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 39;
        this.match(LogicParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImplicationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_implication;
    return this;
}

ImplicationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImplicationContext.prototype.constructor = ImplicationContext;


ImplicationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitImplication(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.ImplicationContext = ImplicationContext;

LogicParser.prototype.implication = function() {

    var localctx = new ImplicationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LogicParser.RULE_implication);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 41;
        this.match(LogicParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EqivalencioContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_eqivalencio;
    return this;
}

EqivalencioContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EqivalencioContext.prototype.constructor = EqivalencioContext;


EqivalencioContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitEqivalencio(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.EqivalencioContext = EqivalencioContext;

LogicParser.prototype.eqivalencio = function() {

    var localctx = new EqivalencioContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, LogicParser.RULE_eqivalencio);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 43;
        this.match(LogicParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Binary_coupleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_binary_couple;
    return this;
}

Binary_coupleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Binary_coupleContext.prototype.constructor = Binary_coupleContext;

Binary_coupleContext.prototype.implication = function() {
    return this.getTypedRuleContext(ImplicationContext,0);
};

Binary_coupleContext.prototype.conjunction = function() {
    return this.getTypedRuleContext(ConjunctionContext,0);
};

Binary_coupleContext.prototype.disjunction = function() {
    return this.getTypedRuleContext(DisjunctionContext,0);
};

Binary_coupleContext.prototype.eqivalencio = function() {
    return this.getTypedRuleContext(EqivalencioContext,0);
};

Binary_coupleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitBinary_couple(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.Binary_coupleContext = Binary_coupleContext;

LogicParser.prototype.binary_couple = function() {

    var localctx = new Binary_coupleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, LogicParser.RULE_binary_couple);
    try {
        this.state = 49;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case LogicParser.T__5:
            this.enterOuterAlt(localctx, 1);
            this.state = 45;
            this.implication();
            break;
        case LogicParser.T__3:
            this.enterOuterAlt(localctx, 2);
            this.state = 46;
            this.conjunction();
            break;
        case LogicParser.T__4:
            this.enterOuterAlt(localctx, 3);
            this.state = 47;
            this.disjunction();
            break;
        case LogicParser.T__6:
            this.enterOuterAlt(localctx, 4);
            this.state = 48;
            this.eqivalencio();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AtomContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_atom;
    return this;
}

AtomContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AtomContext.prototype.constructor = AtomContext;

AtomContext.prototype.SYMBOL = function() {
    return this.getToken(LogicParser.SYMBOL, 0);
};

AtomContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitAtom(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.AtomContext = AtomContext;

LogicParser.prototype.atom = function() {

    var localctx = new AtomContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, LogicParser.RULE_atom);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 51;
        this.match(LogicParser.SYMBOL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Unary_formulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_unary_formula;
    return this;
}

Unary_formulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Unary_formulaContext.prototype.constructor = Unary_formulaContext;

Unary_formulaContext.prototype.negatiation = function() {
    return this.getTypedRuleContext(NegatiationContext,0);
};

Unary_formulaContext.prototype.formula = function() {
    return this.getTypedRuleContext(FormulaContext,0);
};

Unary_formulaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitUnary_formula(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.Unary_formulaContext = Unary_formulaContext;

LogicParser.prototype.unary_formula = function() {

    var localctx = new Unary_formulaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, LogicParser.RULE_unary_formula);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 53;
        this.match(LogicParser.T__7);
        this.state = 54;
        this.negatiation();
        this.state = 55;
        this.formula();
        this.state = 56;
        this.match(LogicParser.T__8);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Binary_formulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LogicParser.RULE_binary_formula;
    return this;
}

Binary_formulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Binary_formulaContext.prototype.constructor = Binary_formulaContext;

Binary_formulaContext.prototype.formula = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormulaContext);
    } else {
        return this.getTypedRuleContext(FormulaContext,i);
    }
};

Binary_formulaContext.prototype.binary_couple = function() {
    return this.getTypedRuleContext(Binary_coupleContext,0);
};

Binary_formulaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LogicVisitor ) {
        return visitor.visitBinary_formula(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LogicParser.Binary_formulaContext = Binary_formulaContext;

LogicParser.prototype.binary_formula = function() {

    var localctx = new Binary_formulaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, LogicParser.RULE_binary_formula);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 58;
        this.match(LogicParser.T__7);
        this.state = 59;
        this.formula();
        this.state = 60;
        this.binary_couple();
        this.state = 61;
        this.formula();
        this.state = 62;
        this.match(LogicParser.T__8);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


exports.LogicParser = LogicParser;
